--- a/notebooks/Words2Vec.ipynb
+++ b/notebooks/Words2Vec.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "metropolitan-playback",
    "metadata": {},
    "outputs": [],
@@ -89,37 +89,6 @@
     "### most similar words example\n",
     "w2v_model.wv.most_similar([\"python\"])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "brown-attribute",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-9-cd99036e07f5>:1: DeprecationWarning: Call to deprecated `most_similar` (Method will be removed in 4.0.0, use self.wv.most_similar() instead).\n",
-      "  w2v_model.most_similar(\"python\",topn = 5)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('scala', 0.9449958801269531),\n",
-       " ('r', 0.9396440982818604),\n",
-       " ('java', 0.9377099275588989),\n",
-       " ('programming', 0.9324311017990112),\n",
-       " ('proficient', 0.9188559651374817)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -636,7 +605,8 @@
     "for second in sentences:\n",
     "    for first in second:\n",
     "        sentence.append(first)\n",
-    "        "
+    "\n",
+    "sentence"
    ]
   },
   {
@@ -930,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fallen-macro",
+   "id": "judicial-jerusalem",
    "metadata": {},
    "outputs": [
     {
