--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "objective-footage",
+   "id": "particular-banana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,29 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "hazardous-delta",
+   "execution_count": 33,
+   "id": "isolated-juice",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['r', 'matlab', 'perl', 'scala', 'java']"
+       "['r', 'pyspark', 'pandas', 'julia', 'matplotlib']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline.most_similar_skills([\"Python\",\"Sql\"],n_recommendations= 5)"
+    "pipeline.most_similar_skills([\"SCIKITLEARN\",\"python\"],n_recommendations= 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "affecting-voluntary",
+   "execution_count": 34,
+   "id": "wrong-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "list"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-trace",
+   "id": "strange-brass",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "boring-diamond",
    "metadata": {},
    "outputs": [],
    "source": []
