--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "particular-banana",
+   "id": "sunrise-hebrew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "experimental-reach",
    "metadata": {},
    "outputs": [],
    "source": [
     "from fydjob.Word2VecPipeline import WordPipeline\n",
+    "from fydjob.utils import category_tagger\n",
     "\n",
     "pipeline = WordPipeline(\"../fydjob/data/models/w2v_model_baseline.model\")\n",
     "\n"
@@ -26,50 +27,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "isolated-juice",
+   "execution_count": 27,
+   "id": "abstract-siemens",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['r', 'pyspark', 'pandas', 'julia', 'matplotlib']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipeline.most_similar_skills([\"SCIKITLEARN\",\"python\"],n_recommendations= 5)"
+    "skills = pipeline.most_similar_skills([\"brain\",\"python\"],n_recommendations= 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "wrong-cutting",
+   "execution_count": 28,
+   "id": "changed-asian",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "[('matplotlib', 'programming'),\n",
+       " ('nltk', 'programming'),\n",
+       " ('spacy', 'programming'),\n",
+       " ('knn', 'knowledge'),\n",
+       " ('scikitlearn', 'programming'),\n",
+       " ('recurrent', 'knowledge'),\n",
+       " ('xgboost', 'programming'),\n",
+       " ('matlab', 'programming'),\n",
+       " ('reinforcement', 'knowledge'),\n",
+       " ('clustering', 'knowledge')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type([\"python\"])"
+    "category_tagger(skills)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strange-brass",
+   "id": "young-yukon",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boring-diamond",
+   "id": "computational-chrome",
    "metadata": {},
    "outputs": [],
    "source": []
