pipeline doc2vec assembly

--- a/notebooks/vectorizing_offers_Ana.ipynb
+++ b/notebooks/vectorizing_offers_Ana.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "retired-douglas",
+   "id": "signed-means",
    "metadata": {},
    "source": [
     "# vectorizing job offers"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-correlation",
+   "id": "collected-jacob",
    "metadata": {},
    "source": [
     "## aim\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "saved-implement",
+   "id": "legislative-parameter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "demographic-clinic",
+   "id": "welsh-aviation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "prospective-patrick",
+   "id": "electoral-proof",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "artificial-duplicate",
+   "id": "innocent-tolerance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "behavioral-botswana",
+   "id": "otherwise-experience",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "joint-pilot",
+   "id": "broke-league",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "documented-orleans",
+   "id": "amended-adapter",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "certified-arena",
+   "id": "controlled-request",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "innocent-johnson",
+   "id": "spare-windows",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "civic-garden",
+   "id": "innovative-genome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "hindu-eleven",
+   "id": "noted-angle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "worth-irish",
+   "id": "russian-walker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-modification",
+   "id": "smooth-robert",
    "metadata": {},
    "source": [
     "## model doc2vec 1"
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-shape",
+   "id": "premium-testimony",
    "metadata": {},
    "source": [
     "Conclusions :)\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "derived-fault",
+   "id": "distinguished-lindsay",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "disciplinary-print",
+   "id": "precious-breakfast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,11 +608,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pending-memorial",
+   "id": "religious-vulnerability",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -635,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secure-praise",
+   "id": "empirical-bunny",
    "metadata": {
     "tags": []
    },
@@ -648,11 +645,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerous-delhi",
+   "id": "stuffed-sitting",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -662,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-briefs",
+   "id": "saved-verse",
    "metadata": {},
    "source": [
     "### test the model by hand and with copy-pasted text\n",
@@ -673,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "motivated-ceramic",
+   "id": "black-assumption",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,11 +678,8 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "infectious-skirt",
+   "id": "instant-member",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -723,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-separation",
+   "id": "inner-belgium",
    "metadata": {},
    "source": [
     "**test model with copy-pasted job**"
@@ -732,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "velvet-visit",
+   "id": "hybrid-arnold",
    "metadata": {
     "tags": []
    },
@@ -760,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "auburn-meditation",
+   "id": "level-noise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "metric-constitution",
+   "id": "daily-disposal",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1189,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "present-taylor",
+   "id": "determined-thinking",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "indirect-identification",
+   "id": "pleased-guinea",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "advance-mentor",
+   "id": "brilliant-thomson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "virtual-jimmy",
+   "id": "collectible-executive",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "international-classroom",
+   "id": "flying-canyon",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1307,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latin-favorite",
+   "id": "outer-machinery",
    "metadata": {},
    "source": [
     "## improve the model 1\n",
@@ -1320,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "several-greece",
+   "id": "proprietary-africa",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1340,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "exterior-membrane",
+   "id": "incorrect-timing",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1354,7 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "rocky-accent",
+   "id": "geographic-imaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,11 +1357,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forward-challenge",
+   "id": "measured-composite",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1380,13 +1368,11 @@
     "data_to_train = filtered_texts_tag_small # texts_tagged_small, texts_tagged, filtered_texts_tag_small\n",
     "\n",
     "# build vocabulary with CBOW (dm=0)\n",
-    "cores = multiprocessing.cpu_count()\n",
     "model_dbow = Doc2Vec(documents=data_to_train,\n",
     "                     dm=0,\n",
     "                     alpha=0.025,\n",
     "                     vector_size=len(data_to_train), \n",
-    "                     min_count=1,\n",
-    "                     workers=cores)\n",
+    "                     min_count=1)\n",
     "\n",
     "# train the model\n",
     "model_dbow.train(data_to_train, total_examples=model_dbow.corpus_count, epochs=50)"
@@ -1395,11 +1381,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tested-compact",
+   "id": "higher-seeker",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -1411,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "automatic-shoulder",
+   "id": "chubby-graphic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,12 +1405,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "opponent-amazon",
+   "id": "exciting-queue",
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "scrolled": true,
     "tags": []
@@ -1451,12 +1433,11 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "sticky-affiliate",
+   "id": "atomic-democracy",
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "scrolled": true,
     "tags": []
@@ -1508,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "certified-treaty",
+   "id": "native-necessity",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1559,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "superior-bhutan",
+   "id": "vocal-monthly",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "educational-lafayette",
+   "id": "prospective-congo",
    "metadata": {},
    "outputs": [
     {
@@ -1619,14 +1600,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrong-relief",
+   "id": "competent-establishment",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "healthy-smoke",
+   "id": "running-default",
    "metadata": {},
    "source": [
     "## Improve the model - 2\n",
@@ -1637,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sonic-camping",
+   "id": "august-length",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-guard",
+   "id": "bronze-municipality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "neutral-messenger",
+   "id": "tamil-plasma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-pennsylvania",
+   "id": "visible-preparation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "powerful-growth",
+   "id": "ceramic-stake",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -1698,7 +1679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-sense",
+   "id": "remarkable-reunion",
    "metadata": {},
    "outputs": [],
    "source": []
