--- a/notebooks/pipeline_assembly.ipynb
+++ b/notebooks/pipeline_assembly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "exotic-desire",
+   "id": "fewer-aberdeen",
    "metadata": {},
    "source": [
     "# Packaging tests"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "broadband-aberdeen",
+   "id": "floppy-syndication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alone-niagara",
+   "id": "subsequent-trunk",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "typical-surname",
+   "id": "discrete-sharing",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "motivated-princeton",
+   "id": "rocky-apartment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "recognized-median",
+   "id": "qualified-supervisor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "utility-calcium",
+   "id": "ancient-atmosphere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "beginning-cameroon",
+   "id": "thermal-separation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "micro-transformation",
+   "id": "beginning-papua",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "operating-relay",
+   "id": "extended-license",
    "metadata": {},
    "source": [
     "# functions for pipeline"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "engaged-little",
+   "id": "lonely-jerusalem",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "received-carbon",
+   "id": "multiple-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "primary-expense",
+   "id": "laden-research",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "unknown-field",
+   "id": "criminal-playback",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "covered-grammar",
+   "id": "incomplete-spotlight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noted-central",
+   "id": "institutional-houston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,34 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-notion",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "elegant-latitude",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# instanciate_Doc2Vec(texts_tagged_small)\n",
-    "# train_Doc2Vec(text_tagged_small)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "limiting-portal",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "higher-preparation",
+   "id": "combined-constraint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +230,8 @@
     "                     alpha=0.025,\n",
     "                     vector_size=len(data_to_train), \n",
     "                     min_count=1,\n",
-    "                     workers=cores)\n",
+    "                     workers=cores\n",
+    "                    )\n",
     "\n",
     "# train the model\n",
     "model_dbow.train(data_to_train, total_examples=model_dbow.corpus_count, epochs=15)"
@@ -266,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "preceding-brown",
+   "id": "enormous-herald",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,14 +261,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-death",
+   "id": "close-harvest",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "increased-charles",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "absent-circulation",
+   "id": "obvious-newspaper",
    "metadata": {},
    "source": [
     "## start pipeline"
@@ -303,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "floral-bernard",
+   "id": "handmade-corner",
    "metadata": {},
    "outputs": [],
    "source": [
